# pycbirrt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: multi_config_demo.py  planar_arm.py  tsr_union_demo.py  ur5e_mujoco.py
src/pycbirrt/: __init__.py  config.py  exceptions.py  planner.py  tree.py
src/pycbirrt/backends/: __init__.py  eaik.py  mujoco.py
src/pycbirrt/interfaces/: __init__.py  collision_checker.py  ik_solver.py  robot_model.py
tests/: test_planner.py
urdf/: ur5e.urdf  ur5e_mujoco.urdf
