[project]
name = "pycbirrt"
version = "1.0.0"
description = "CBiRRT motion planner with TSR constraints"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
maintainers = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
dependencies = [
    "numpy>=1.24",
    "tsr",
]

[tool.uv.sources]
tsr = { workspace = true }

[project.optional-dependencies]
mujoco = ["mujoco>=3.0"]
eaik = ["eaik"]
examples = [
    "matplotlib",
    "mediapy",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
all = ["pycbirrt[mujoco,eaik,examples,dev]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/personalrobotics/pycbirrt"
Repository = "https://github.com/personalrobotics/pycbirrt"
Issues = "https://github.com/personalrobotics/pycbirrt/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/pycbirrt/__init__.py" = ["F401"]
"src/pycbirrt/**/__init__.py" = ["F401"]
